--- a/m/css/account-box.css
+++ b/m/css/account-box.css
@@ -11,22 +11,20 @@ main .main-body .main-center .account-box {
 
 main .main-body .main-center .account-box .account-header {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     flex-direction: row;
+    align-items: center;
     width: 100%;
-}
+    padding: 5px;
+} 
 
 
 main .main-body .main-center .account-box .account-header .account-header-box {
     display: flex;
     justify-content: flex-start;
     flex-direction: row;
-    align-items: flex-end;
-    width: 50%;
-    height: 7vh;
-    min-height: 65px;
+    align-items: center;
     font-size: 0.8rem;
-    padding-bottom: 10px;
 }
 
 
@@ -35,19 +33,15 @@ main .main-body .main-center .account-box .account-header .mod-box {
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
-    width: 50%;
     height: 100%;
-    margin: 0 20px;
-    font-size: 1.3rem;
-
 }
 
-main .main-body .main-center .account-box .account-header .mod-box div {
-    margin: 0px 0px 5px 10px;
-}
-
-main .main-body .main-center .account-box .account-header .mod-box .mod-plus {
+main .main-body .main-center .account-box .account-header .mod-box .mod-excel {
     color: green;
+}
+
+main .main-body .main-center .account-box .account-header .mod-box .mod-shrink-all {
+    color: #ed5c5c;
 }
 
 main .main-body .main-center .account-box .account-header .account-header-right .save-excel:hover {
@@ -55,7 +49,7 @@ main .main-body .main-center .account-box .account-header .account-header-right 
 }
 
 main .main-body .main-center .account-box .account-header .account-header-box .header-element span {
-    margin-left : 10px;
+    margin-right : 10px;
 }
 
 main .main-body .main-center .account-box .account-header .account-header-box .header-element .default {
@@ -67,7 +61,6 @@ main .main-body .main-center .account-box .account-header .account-header-box .h
 }
 
 main .main-body .main-center .account-box .account-body {
-    height:80vh;
     overflow-y: auto;
 }
 
@@ -78,24 +71,21 @@ main .main-body .main-center .account-box .account-body .account-element {
 main .main-body .main-center .account-box .account-body .account-element .account-summary {
     display: flex;
     justify-content: space-between;
-    flex-direction: row;
+    flex-direction: column;
     align-items: flex-start;
     width: 100%;
-    height: 7vh;
     min-height: 65px;
     font-size: 0.8rem;
-    border-bottom: 1px solid lightgray;
 }
 
 main .main-body .main-center .account-box .account-body .account-element .account-summary .element-header {
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    flex-direction: row;
+    justify-content: space-between;
     align-items: center;
-    width: 180px;
+    width: 100%;
     height: 100%;
-    border-right: 1px solid lightgrey;
-    padding-top: 5px;
+    padding: 5px;
     background-color: white;
 }
 
@@ -107,11 +97,11 @@ main .main-body .main-center .account-box .account-body .account-element .accoun
 
 main .main-body .main-center .account-box .account-body .account-element .account-summary .element-header .ev-stat {
     display: none;
-    width: 90%;
+    width: 30%;
     color: white;
     border-radius: 10%/50%;
     text-align: left;
-    padding: 5px;
+    padding: 3px;
     font-size: 0.6rem;
 }
 
@@ -128,6 +118,7 @@ main .main-body .main-center .account-box .account-body .account-element .accoun
 }
 
 main .main-body .main-center .account-box .account-body .account-element .account-summary .element-header .ev-chname {
+    width: 70%;
     font-size: 0.6rem;
 }
 
@@ -136,7 +127,7 @@ main .main-body .main-center .account-box .account-body .account-element .accoun
     flex-direction: column;
     justify-content: space-around;
     align-items: flex-start;
-    width: 40%;
+    width: 100%;
     height: 100%;
     padding: 5px;
     background-color: white;
@@ -149,16 +140,19 @@ main .main-body .main-center .account-box .account-body .account-element .accoun
 }
 
 main .main-body .main-center .account-box .account-body .account-element .account-summary .element-body .data-row1 {
-    font-size: 1rem;
+    font-size: 0.8rem;
+    width: 100%;
+    padding: 5px;
+}
+
+main .main-body .main-center .account-box .account-body .account-element .account-summary .element-body .data-row2 {
+    width: 100%;
+    text-align: right;
+    font-size: 0.6rem;
 }
 
 main .main-body .main-center .account-box .account-body .account-element .account-summary .element-body .data-row1 span::after {
-    content: " / ";
-}
-
-main .main-body .main-center .account-box .account-body .account-element .account-summary .element-body .data-row1 span input {
-    width: 100px;
-    border-bottom: 1px solid lightgray !important;
+    content: "  ";
 }
 
 main .main-body .main-center .account-box .account-body .account-element .account-summary .element-body .data-row1 span:last-child::after,
@@ -175,25 +169,25 @@ main .main-body .main-center .account-box .account-body .account-element .accoun
     justify-content: space-between;
     flex-direction: row;
     align-items: center;
-    width: 40%;
+    width: 100%;
     height: 100%;
-    padding: 0 10px;
+    padding: 5px;
     background-color: white;
 }
 
 main .main-body .main-center .account-box .account-body .account-element .account-summary .element-footer .ev-result {
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: flex-start;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
     height: 100%;
 }
 
 main .main-body .main-center .account-box .account-body .account-element .account-summary .element-footer .ev-result .ev-result-stat {
     display: flex;
     justify-content: flex-start;
-    width: 100%;
     align-items: flex-start;
+    margin-right: 5px;
 }
 
 
@@ -263,7 +257,7 @@ main .main-body .main-center .account-box .account-body .account-element .accoun
 
 main .main-body .main-center .account-box .account-body .account-element .account-summary .element-tail {
     border-left: 1px solid lightgrey;
-    width: 220px;
+    width: 100%;
     height: 100%;
     background-color: white;
 
@@ -301,7 +295,7 @@ main .main-body .main-center .account-box .account-body .account-element .accoun
 
 
 
-main .main-body .main-center .account-box .account-body .account-element .account-summary .element-tail .tail-box .item .itembtn .statbtn i {
+main .main-body .main-center .account-box .account-body .account-element .account-summary .element-tail .tail-box .item .itembtn .statbtn svg {
     font-size: 1.3rem;
 }
 
@@ -350,7 +344,7 @@ main .main-body .main-center .account-box .account-body .account-element .accoun
 main .main-body .main-center .account-box .account-body .account-element .account-expand {
     display: flex;
     justify-content: space-between;
-    flex-direction: row;
+    flex-direction: column;
     align-items: flex-start;
     width: 100%;
     font-size: 0.8rem;
@@ -365,7 +359,7 @@ main .main-body .main-center .account-box .account-body .account-element .accoun
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    width: 180px;
+    width: 100%;
     height: 100%;
     padding-top: 10px;
        
@@ -384,7 +378,7 @@ main .main-body .main-center .account-box .account-body .account-element .accoun
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    width: 40%;
+    width: 100%;
     height: 100%;
     padding: 10px 5px;
 }
@@ -402,11 +396,11 @@ main .main-body .main-center .account-box .account-body .account-element .accoun
     text-align: center;
     color:#555;
     background-color: lightgray;
-    width: 15%;
+    width: 20%;
 }
 
 main .main-body .main-center .account-box .account-body .account-element .account-expand .expand-body .account-detail-row .data {
-    width: 85%;
+    width: 80%;
     padding-left:5px;
 }
 
@@ -415,7 +409,7 @@ main .main-body .main-center .account-box .account-body .account-element .accoun
     justify-content: space-between;
     flex-direction: column;
     align-items: flex-start;
-    width: 40%;
+    width: 100%;
     height: 100%;
     padding: 10px;
     
@@ -444,7 +438,7 @@ main .main-body .main-center .account-box .account-body .account-element .accoun
 
 main .main-body .main-center .account-box .account-body .account-element .account-expand .expand-footer .result-history .assign .assign-date,
 main .main-body .main-center .account-box .account-body .account-element .account-expand .expand-footer .result-history .result .item-box .result-date {
-    width: 125px;
+    width: 40%;
 }
 
 main .main-body .main-center .account-box .account-body .account-element .account-expand .expand-footer .result-history .result .result-msg {
@@ -466,7 +460,7 @@ main .main-body .main-center .account-box .account-body .account-element .accoun
 main .main-body .main-center .account-box .account-body .account-element .account-expand .expand-footer .result-history .assign .assign-kind,
 main .main-body .main-center .account-box .account-body .account-element .account-expand .expand-footer .result-history .result .result-kind {
     text-align: center;
-    width: 80px;
+    width: 35%;
 }
 
 main .main-body .main-center .account-box .account-body .account-element .account-expand .expand-footer .result-history .kind-option {
@@ -558,7 +552,7 @@ main .main-body .main-center .account-box .account-body .account-element .accoun
 
 main .main-body .main-center .account-box .account-body .account-element .account-expand .expand-tail {
 
-    width: 220px;
+    width: 100%;
     height: 100%;
 }
 
@@ -617,10 +611,12 @@ main .main-body .main-center .account-box .account-body .account-pagination {
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: center;
     padding: 10px;
     font-size: 0.8rem;
-    color:black;
+    color:white;
+    background-color: #555;
+    border: 1px solid white;
+    margin-bottom: 5px;
 }
-
