--- a/m/css/chart-box.css
+++ b/m/css/chart-box.css
@@ -27,7 +27,7 @@ main .main-body .main-center .table-box.only {
 
 main .main-body .main-center .table-box .order-table {
     width: 100%;
-    font-size: 0.2vw;
+    font-size: 0.7rem;
     border-collapse: collapse;
 }
 
